# watomatic

./: CMakeLists.txt  README.md  adc_sensor.c  display.c  display.h  font.h  main.c  sensor.h
